# conical-filter-shaper

./: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  README.md  plan.md  pyproject.toml
cad/: __init__.py  params.py
cad/assemblies/: __init__.py  arm_assy.py  ejection_assy.py  full_assy.py  mandrel_assy.py  ring_assy.py  ruler_assy.py
cad/components/: __init__.py  _shell_common.py  base_cap.py  base_plate.py  cam_lock.py  cam_ring.py  ejection_rod.py  ferrous_strip.py  handle_grip_insert.py  handle_housing.py  magnetic_marker.py  overlap_fin.py  pivot_hinge.py  ptfe_slide_strip.py  ruler_arm.py  shell_half_l.py  shell_half_r.py  sliding_arm.py  thumb_screw.py  tip_insert_block.py
cad/utils/: __init__.py  cam_geometry.py  cone_math.py  ruler_math.py  tolerances.py
docs/: cadquery_modeling_plan.md  design_spec.md  fmea.md  manufacturability.md  repo_structure.md  toolchain_bluefin.md
docs/adr/: adr-001-cadquery-as-source.md  adr-002-pom-c-for-shells.md  adr-003-ball-detent-over-snap.md  adr-004-exports-gitignored.md
manufacturing/: README.md  surface_finish_notes.md
manufacturing/bom/: bom_r0-1.csv  bom_r1-0.csv
manufacturing/inspection/: critical_dims_v0-1.md  fai_checklist_v0-1.md
refs/dripper_dimensions/: README.md
scripts/: build_exports.py  bump_revision.py  gen_bom.py  gen_drawings.py  render_all.py  validate_geometry.py
tests/: __init__.py  conftest.py  test_assemblies.py  test_assembly_clearances.py  test_cam_geometry.py  test_components.py  test_cone_angles.py  test_geometric_clearances.py  test_params.py  test_ruler_math.py  test_tolerances.py
(+5 files in other folders)
